compiler/tools/fpp-check/test/component_array_format_not_numeric.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_array_format_not_numeric.fpp: 2.24
array A = [3] S format "{.3f}"
                       ^
error: invalid format string: type struct S is not numeric
